[gd_scene load_steps=3 format=3 uid="uid://c6kqcsbtkoqjh"]

[ext_resource type="Theme" path="res://assets/fonts/bmpfont.tres" id="1_c8gq4"]
[ext_resource type="Script" path="res://hud.gd" id="1_cmb02"]

[node name="HUD" type="CanvasLayer" node_paths=PackedStringArray("n_caption", "n_step", "n_reset", "n_undo", "n_redo")]
script = ExtResource("1_cmb02")
n_caption = NodePath("HBoxContainer/Label")
n_step = NodePath("HBoxContainer/VBoxContainer/Label")
n_reset = NodePath("HBoxContainer/VBoxContainer/Reset")
n_undo = NodePath("HBoxContainer/VBoxContainer/Undo")
n_redo = NodePath("HBoxContainer/VBoxContainer/Redo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_c8gq4")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "COMPLETED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "STEP : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "RESET"

[node name="Undo" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "UNDO"

[node name="Redo" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "REDO"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Redo" to="." method="_on_redo_pressed"]
